@@ -1,3 +1,8 @@
+Wed Dec 15 13:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* MySQL.m, Postgres.m, ECPG.pgm: Do NSLog() logging of field
+	information only when debug level is greater than 1.
+
 Fri Dec 10 10:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GNUmakefile: Remove unnecessary libraries from link commands for
